# hip-wrapper

./: CMakeLists.txt  README.md  hip-functions.txt  wrap.py
